@@ -640,7 +640,13 @@ Bug fixes
   
 ======================= Lucene 3.6.0 =======================
 
-(No Changes)
+Security fixes
+
+* LUCENE-3588: Try harder to prevent SIGSEGV on cloned MMapIndexInputs:
+  Previous versions of Lucene could SIGSEGV the JVM if you try to access
+  the clone of an IndexInput retrieved from MMapDirectory. This security fix
+  prevents this as best as it can by throwing AlreadyClosedException
+  also on clones.  (Uwe Schindler, Robert Muir)
 
 ======================= Lucene 3.5.0 =======================
 
